fixed text wrapping issue with map themes in mobile view, fixed select issue where the html select was too wide on mobile and wrapped to the next line causing it to be out of view

--- a/app/stylesheets/layout.css
+++ b/app/stylesheets/layout.css
@@ -619,7 +619,7 @@ top:0px;
 	}
 
 	.analysis-options-select {
-		width: 220px;
+		width: 195px;
 	}
 
 	.tree-cover-dialog {
